# TestAutomationLabs

./: pyproject.toml
lab5/: main.py
lab5/pages/: base.py  gmail.py
